--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This site can be accessed at [Heroku link here]. It is a collection of sample code illustrating common use cases.",
   "main": "app.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
